objects/Rider_History__b.object
<CustomObject>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rider_Account__c</fullName>
        <label>Rider Account</label>
        <length>16</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rider_Rating__c</fullName>
        <label>Rider Rating</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Location_Lat__c</fullName>
        <label>Start Location Latitude</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Location_Long__c</fullName>
        <label>Start Location Longitude</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
</CustomObject>